<resources>
    <string name="app_name">SantanderDevWeek</string>
    <string name="notificacoes">Notificações</string>
    <string name="ola_usuario">Olá, %s</string>
    <string name="agencia">Ag %S</string>
    <string name="conta_corrente">Cc %S</string>
    <string name="saldo_disponivel">Saldo Disponivel</string>
    <string name="saldo">R$ %S</string>
    <string name="saldo_limite">Limite: R$ %S</string>
    <string name="ver_extrato">Ver Extrato</string>
    <string name="pagar">Pagar</string>
    <string name="transferir">Transferir</string>
    <string name="recarga">Recarga</string>
    <string name="cartao_final">Cartão Final: %S</string>
    <string name="validade_cartao">Validade: %s</string>
    <string name="cliente_desde">Cliente desde %s</string>
</resources>